--- a/modulo2 CSS/desafio 12/style.css
+++ b/modulo2 CSS/desafio 12/style.css
@@ -1,4 +1,12 @@
 @charset "UTF-8";
+@import url('https://fonts.googleapis.com/css2?family=Passion+One:wght@400;700;900&family=Sriracha&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Passion+One:wght@400;700;900&display=swap');
+
+:root{
+    --font1: verdana, geneva, tahoma, sans-serif;
+    --font2: 'passion one', cursive;
+    --font3: 'scriracha', cursive; 
+}
 *{
     margin: 0px;
     padding: 0px;
@@ -6,6 +14,7 @@
 html body{
     background-color: darkgray;
     min-height: 100vh;
+    font-family: var(--font1);
 }
 header{
     background-color: black;
@@ -15,6 +24,8 @@ header{
 header h1{
     padding-top: 50px;
     font-variant: small-caps;
+    font-family: var(--font2);
+    font-size: 10vw;
 
 }
 header p{
@@ -33,7 +44,10 @@ section{
     padding-top: 10vh;
     padding-bottom: 10vh;
     padding-left: 30px;
-    line-height: 1,5em;
+    line-height: 1.5em;
+    font-family: var(--font3);
+    font-size: 3vw;
+    
 
 }
 section.normal{
@@ -45,7 +59,8 @@ section.imagem{
 }
 section.imagem p{
     background-color: rgba(0, 0, 0, 0.253);
-    width: 300px;
+    display: inline-block;
+    padding: 5px;
 
 }
 
